# lec10-model-reuse

./: README.md  main_flet.py  main_terminal.py  model.py  pyproject.toml  requirements.txt  test_main.py
